experiment_output/error_log/nondex-yookeun-gradle-multi:gradle-multi-app.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task158/wd/NonDex-plugin-test/github.com/yookeun/gradle-multi/gradle-multi-app/src/main/java/com/example/app/GradleMultiAppMain.java:10: error: package javax.annotation does not exist
import javax.annotation.PostConstruct;
                       ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task158/wd/NonDex-plugin-test/github.com/yookeun/gradle-multi/gradle-multi-app/src/main/java/com/example/app/GradleMultiAppMain.java:24: error: cannot find symbol
	@PostConstruct
	 ^
  symbol:   class PostConstruct
  location: class GradleMultiAppMain
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task158/wd/NonDex-plugin-test/github.com/yookeun/gradle-multi/gradle-multi-app/src/main/java/com/example/app/GradleMultiAppMain.java:28: error: cannot find symbol
			System.out.println("title = " + boardDto.getTitle());
			                                        ^
  symbol:   method getTitle()
  location: variable boardDto of type BoardDto
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task158/wd/NonDex-plugin-test/github.com/yookeun/gradle-multi/gradle-multi-app/src/main/java/com/example/app/GradleMultiAppMain.java:29: error: cannot find symbol
			System.out.println("content = " + boardDto.getContent());
			                                          ^
  symbol:   method getContent()
  location: variable boardDto of type BoardDto
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':gradle-multi-app:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 10s
